Remove redundant codes from all files